latest news fix and scrollbar style added

--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,20 @@ code {
     monospace;
 }
 
+body::-webkit-scrollbar {
+  width: 8px;
+}
+
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 0 0;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #bb1e1e;
+  outline: 1px solid #941010;
+  border-radius: 5px;
+}
+
 // html {
 //   overflow: scroll;
 //   overflow-x: hidden;
